--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "rimraf": "^3.0.2",
     "simple-git-hooks": "^2.7.0",
     "ts-node": "^9.1.1",
-    "typescript": "4.3.5",
+    "typescript": "^4.8.0",
     "vitest": "^0.34.6"
   },
   "dependencies": {
